typos and use getFirst